kubeflow-profile/templates/kfp/ui-artifact-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-ui-artifact
  labels:
    app: ml-pipeline-ui-artifact
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-pipeline-ui-artifact
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ml-pipeline-ui-artifact
    spec:
      containers:
        - name: ml-pipeline-ui-artifact
          image: gcr.io/ml-pipeline/frontend:1.7.1
          ports:
            - name: artifact-ui
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 10m
              memory: 70Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default-editor
      serviceAccount: default-editor
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
