kubeflow-profile/templates/kfp/visualization-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-visualizationserver
  labels:
    app: ml-pipeline-visualizationserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-pipeline-visualizationserver
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ml-pipeline-visualizationserver
    spec:
      containers:
        - name: ml-pipeline-visualizationserver
          image: gcr.io/ml-pipeline/visualization-server:1.7.1
          ports:
            - name: vis-server
              containerPort: 8888
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 200Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default-editor
      serviceAccount: default-editor
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
