kubeflow-profile/templates/kfp/ui-artifact-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-pipeline-ui-artifact
  labels:
    app: ml-pipeline-ui-artifact
spec:
  ports:
    - name: http-artifact-ui
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: ml-pipeline-ui-artifact
  type: ClusterIP
