kubeflow-profile/templates/kfp/visualization-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-pipeline-visualizationserver
  labels:
    app: ml-pipeline-visualizationserver
spec:
  ports:
    - name: http-visualizationserver
      protocol: TCP
      port: 8888
      targetPort: 8888
  selector:
    app: ml-pipeline-visualizationserver
  type: ClusterIP
