kubeflow-profile/templates/kfp/visualization-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ml-pipeline-visualizationserver
spec:
  host: ml-pipeline-visualizationserver
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
